test-suite/tests/roundtrip/invalid/semantic/keyword_as_identifier/03/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/keyword_as_identifier/03/input.essence:1:6:
  |
1 | find letting,b,c: int(1..3)
  |      ^
Missing Domain

tests/roundtrip/invalid/semantic/keyword_as_identifier/03/input.essence:1:6:
  |
1 | find letting,b,c: int(1..3)
  |      ^
Missing <identifier>

tests/roundtrip/invalid/semantic/keyword_as_identifier/03/input.essence:1:6:
  |
1 | find letting,b,c: int(1..3)
  |      ^
Missing :

tests/roundtrip/invalid/semantic/keyword_as_identifier/03/input.essence:1:13:
  |
1 | find letting,b,c: int(1..3)
  |             ^
Missing Unknown

tests/roundtrip/invalid/semantic/keyword_as_identifier/03/input.essence:1:17:
  |
1 | find letting,b,c: int(1..3)
  |                 ^^^^^^^^^^^
Skipped tokens

tests/roundtrip/invalid/semantic/keyword_as_identifier/03/input.essence:1:17:
  |
1 | find letting,b,c: int(1..3)
  |                 ^
Missing Expression

tests/roundtrip/invalid/semantic/keyword_as_identifier/03/input.essence:1:17:
  |
1 | find letting,b,c: int(1..3)
  |                 ^
Missing be

